<resources>
    <string name="app_name">BowlNow!</string>
    <string name="background">background</string>
    <string name="login_activity_background">Login activity background</string>
    <string name="login_logo">login_logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="privacy_policy">Privacy</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="enter_your_email"> Enter your email</string>
    <string name="enter_your_password"> Enter your password</string>
    <string name="PasswordSave">""</string>
    <string name="EmailSave">""</string>
    <string name="CheckboxSave">""</string>
    <string name="signupbackground">SignUpBackground</string>
    <string name="welcome">Welcome</string>
    <string name="top_right_signup_icon">Top right signup icon</string>
    <string name="Signup_text">Our platform creates an opportunity for the bowling community to earn and redeem rewards at their favorite centers. Made for bowlers, by bowlers, our mission is to provide a custom platform of inclusivity, support and feedback!</string>
    <string name="user_account">User Account</string>
    <string name="bowling_center">Bowling Center</string>
    <string name="or">OR</string>
    <string name="oops">Oops!</string>
    <string name="forgot_image">Forgot password image</string>
    <string name="forgot_background">forgot background</string>
    <string name="forgot_subtitle">Did you forget your password?</string>
    <string name="forgot_text">Please enter your email address below to recieve an account recovery email.</string>
    <string name="recover_account">Recover Account</string>
    <string name="Global_Admin_Title">Welcome Global Admin,</string>
    <string name="Global_Admin_Text">What would you like to do today?</string>
    <string name="Global_Button1">Get Pending Centers</string>
    <string name="Global_Button2">Patch Image Url</string>
    <string name="my_centers_background">My Centers Background</string>
    <string name="create_account">Create Account</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="enter_your_centers_name">Enter your centers name</string>
    <string name="enter_centers_email_address">Enter centers email address</string>
    <string name="bpaa_number_if_applicable">BPAA number (if applicable)</string>
    <string name="center_accounts">Center Accounts</string>
    <string name="center_text">This form is for bowling centers ONLY who wish to join our program. Please signup with your centers information to give your customers access to loyalty, coupons and other exciting programs!</string>
    <string name="please_fill_out_our_form_below">Please fill out our form below:</string>
    <string name="user_accounts">User Accounts</string>
    <string name="user_text">A user account is intended for all levels of bowlers who desire to visit and join loyalty programs at a nearby BowlNow registered bowling center!</string>
</resources>
